cmake_minimum_required(VERSION 3.22)
project(ROSInterface)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/../com.pac48.unity.unity-ros2/Runtime/Plugins/ CACHE PATH "Installation directory" FORCE)
set(BUILD_SHARED_LIBS ON CACHE PATH "Build shared libraries" FORCE)

find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_runtime REQUIRED)

include_directories(${EIGEN3_INCLUDE_DIRS})

add_library(ROSInterface SHARED src/interface.cpp)
target_include_directories(ROSInterface PRIVATE include)
target_include_directories(ROSInterface PUBLIC ${CMAKE_INSTALL_PREFIX}/include)
target_include_directories(ROSInterface PRIVATE ${builtin_interfaces_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${libstatistics_collector_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rcl_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rcl_interfaces_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rcl_logging_interface_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rcl_logging_spdlog_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rcl_yaml_param_parser_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rclcpp_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rcpputils_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rcutils_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rmw_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rmw_dds_common_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rmw_fastrtps_cpp_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rmw_fastrtps_shared_cpp_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rmw_implementation_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosgraph_msgs_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_default_runtime_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_generator_c_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_runtime_c_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_runtime_cpp_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_typesupport_cpp_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_typesupport_fastrtps_c_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_typesupport_fastrtps_cpp_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_typesupport_interface_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_typesupport_introspection_c_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${rosidl_typesupport_introspection_cpp_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${statistics_msgs_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${std_msgs_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${sensor_msgs_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${geometry_msgs_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${nav_msgs_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${tf2_ros_INCLUDE_DIRS})
target_include_directories(ROSInterface PRIVATE ${tracetools_INCLUDE_DIRS})




target_link_libraries(ROSInterface PRIVATE ${builtin_interfaces_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${libstatistics_collector_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rcl_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rcl_interfaces_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rcl_logging_interface_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rcl_logging_spdlog_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rcl_yaml_param_parser_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rclcpp_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rcpputils_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rcutils_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rmw_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rmw_dds_common_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rmw_fastrtps_cpp_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rmw_fastrtps_shared_cpp_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rmw_implementation_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosgraph_msgs_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_default_runtime_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_generator_c_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_runtime_c_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_runtime_cpp_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_typesupport_cpp_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_typesupport_fastrtps_c_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_typesupport_fastrtps_cpp_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_typesupport_interface_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_typesupport_introspection_c_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${rosidl_typesupport_introspection_cpp_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${statistics_msgs_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${std_msgs_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${sensor_msgs_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${geometry_msgs_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${nav_msgs_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${tf2_ros_LIBRARIES})
target_link_libraries(ROSInterface PRIVATE ${tracetools_LIBRARIES})

# install targets
set_target_properties(ROSInterface PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
install(TARGETS ROSInterface
        LIBRARY DESTINATION lib
        )

add_executable(ROSInterfaceTest test.cpp)
target_include_directories(ROSInterfaceTest PRIVATE include)
target_link_libraries(ROSInterfaceTest ROSInterface)
