<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>intera_core_msgs</name>
    <version>5.3.0</version>
    <description>
        Messages and Services required for communication with the Intera
        Robots from Rethink Robotics.
    </description>

    <maintainer email="rsdk.support@rethinkrobotics.com">
        Rethink Robotics Inc.
    </maintainer>
    <license>Apache 2.0</license>
    <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
    <url type="repository">
        https://github.com/RethinkRobotics/intera_common
    </url>
    <url type="bugtracker">
        https://github.com/RethinkRobotics/intera_common/issues
    </url>
    <author>Rethink Robotics Inc.</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>action_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>